Much code cleanup, documentaiton improvements, bugfixes, etc
